<resources>
    <string name="BASE_URL">https://hanjullo.akkyu.net</string>

    <string name="app_name">한줄로</string>
    <string name="default_loading">로딩중</string>

    <string name="user_ID_inputHint">ID</string>
    <string name="user_PW_inputHint">PW</string>
    <string name="autologin_text">로그인 상태 유지 (자동 로그인)</string>
    <string name="login_btn_text">LOG IN</string>
    <string name="find_id_btn_text">ID 찾기</string>
    <string name="find_pw_btn_text">PW 찾기</string>
    <string name="register_btn_text">한줄로 가입하기</string>

    <string name="hello_message_text">환영합니다 한줄로 님!\n여정을 시작하시겠습니까?</string>
    <string name="start_btn_text">시작하기</string>

    <string name="name_set_text">당신의 활동명은?</string>
    <string name="name_input_text">활동명을 입력하세요</string>

    <string name="register_phone_text">휴대폰 인증</string>
    <string name="register_phone_hint_text">휴대폰 번호를 입력하세요</string>
    <string name="register_phone_check_button_text">인증</string>
    <string name="register_name_text">활동명</string>
    <string name="register_name_check_button_text">확인</string>
    <string name="register_id_text">아이디</string>
    <string name="register_id_hint_text">아이디를 입력하세요</string>
    <string name="register_password_text">비밀번호</string>
    <string name="register_password_check_text">비밀번호 확인</string>
    <string name="register_password_hint_text">비밀번호를 입력하세요</string>
    <string name="register_password_check_hint_text">비밀번호를 다시 입력하세요</string>
    <string name="register_next_btn">회원가입</string>

    <string name="find_id_title_text">회원 정보에 등록한\n휴대전화로 인증</string>
    <string name="find_name_hint_text">활동명을 입력하세요</string>
    <string name="find_phone_hint_text">휴대폰 번호를 입력하세요</string>
    <string name="find_get_sms_btn_text">인증번호 받기</string>
    <string name="find_code_hint_text">인증번호를 입력하세요</string>
    <string name="find_code_check_btn_text">인증하기</string>

    <string name="result_id_title_text">ID 찾기</string>
    <string name="result_id_desc_text">회원님의 정보와 일치하는 아이디는\n다음과 같습니다</string>
    <string name="result_id_login_btn_text">로그인</string>
    <string name="result_id_find_pw_btn_text">PW 찾기</string>

    <string name="find_pw_title_text">비밀번호 찾기</string>
    <string name="find_pw_desc_text">비밀번호를 찾으시려는 아이디와\n휴대폰 번호를 입력하세요</string>
    <string name="find_pw_id_hint_text">아이디를 입력하세요</string>

    <string name="tos_title_text">이용 약관</string>
    <string name="tos_privacy_select_text">개인정보 수집 및 이용 동의 (필수)</string>
    <string name="tos_eula_select_text">서비스 이용 동의 (필수)</string>

    <string name="welcome_message_text">안녕하세요,\n한 줄 여정을 함께 그려나갈\n준비가 되셨나요?</string>
    <string name="welcome_intro_title_text">한줄로 \"여행자\" 에게…</string>
    <string name="welcome_intro_content_text">모험을 시작한 당신\n가는 길 마다 깃발을 꽂아야\n방향을 잃지 않는 답니다.\n\n당신이 어디에 있었는지\n당신이 어디에 있는지\n당신이 어디로 향하는지\n점을 찍어 나만의 지도로 만드세요\n\n표시점이 모여 한 선을 이루고,\n줄 위를 걷는 당신은\n저 멀리 종착지에\n점차 우아하게 다가설 수 있으니까요.</string>

    <string name="ellipse">EllipseLine</string>
    <string name="profile_image">ProfileImage</string>
    <string name="around_me_bg_image">AroundMeImage</string>
    <string name="add_btn">ImageAddBtn</string>

    <string name="hello_text">님, 안녕 !</string>
    <string name="name_text_default">딸기크레페냠냠</string>

    <string name="today_answer">오늘의 한 줄 답변하기</string>

    <string name="today_text_default">Today</string>
    <string name="today_num_default">0</string>
    <string name="today_slash">/</string>
    <string name="total_num_default">0</string>

    <string name="around_me_text">Around me</string>
    <string name="keyword_text">keyword</string>
    <string name="keyword_default">#태그</string>

    <string name="inside_me_text">Inside me</string>
    <string name="behind_me_text">Behind me</string>
    <string name="in_front_of_me_text">In front of me</string>

    <string name="inside_me_btn">InsideMeBtn</string>
    <string name="behind_me_btn">BehindMeBtn</string>
    <string name="in_front_of_me_btn">FrontMeBtn</string>

    <string name="arrow_btn_light">ArrowButtonLight</string>
    <string name="arrow_btn_dark">ArrowButtonDark</string>

    <string name="around_me_example">오늘도 바빴지만 나름 감사한 하루를 보냈어 !</string>

    <string name="profile_btn">ProfileBtn</string>
    <string name="ranking_btn">RankingBtn</string>
    <string name="calendar_btn">CalendarBtn</string>
    <string name="setting_btn">SettingBtn</string>

    <string name="question_A_text">오늘 하루는 어땠어?</string>

    <string name="question_today_best">최고야</string>
    <string name="question_today_good">좋아</string>
    <string name="question_today_nice">괜찮아</string>
    <string name="question_today_not_bad">그냥 그래</string>
    <string name="question_today_bad">별로야</string>

    <string name="next_text">다음</string>

    <string name="question_B_text">구체적으로 어땠길래?</string>

    <string name="next_btn">NextBtn</string>

    <string name="answer_third_1">직업</string>
    <string name="answer_third_2">학업</string>
    <string name="answer_third_3">친구</string>
    <string name="answer_third_4">가족</string>
    <string name="answer_third_5">취미</string>
    <string name="answer_third_6">운동</string>
    <string name="answer_third_7">음식</string>
    <string name="answer_third_8">수면</string>
    <string name="answer_third_9">쇼핑</string>
    <string name="answer_third_10">돈</string>
    <string name="answer_third_11">휴식</string>
    <string name="answer_third_12">여행</string>
    <string name="answer_third_13">인간관계</string>
    <string name="answer_third_14">SNS</string>

    <string name="charCount_text_default">0/140</string>

    <string name="extra_question_example">오늘 하루 간절히 바랐던 것이 있다면?</string>

    <string name="daily_end_point">1 POINT!</string>
    <string name="daily_end">오늘 한 줄 채우기 완료!</string>

    <string name="ibf_b_title_text">BEHIND ME</string>

    <string name="daily_end_around">Around me</string>
    <string name="daily_end_in_front">In front of me</string>
    <string name="daily_end_behind">Behind me</string>
    <string name="daily_end_inside">Inside me</string>

    <string name="ranking_ranking">RANKING</string>
    <string name="ranking_date">Oct. 5. 2021</string>
    <string name="ranking_name">name</string>
    <string name="ranking_point">point</string>

    <string name="my_ranking_text">me</string>
    <string name="my_ranking">32</string>
    <string name="my_ranking_name">딸기크레페냠냠</string>
    <string name="my_ranking_point">50pt</string>

    <string name="home_pop_Q_icon">Q.</string>
    <string name="home_pop_Question">1년전 나에게 해주고 싶은 말이 있다면?</string>
    <string name="home_pop_Answer">존버하자</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar_title">CALENDAR</string>
    <string name="calendar_flag">CalendarFlagImg</string>
    <string name="title_activity_register_name">RegisterNameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for fragments for navigation -->


</resources>