<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ellipseLine"
        android:layout_width="297dp"
        android:layout_height="183dp"
        android:contentDescription="@string/ellipse"
        app:layout_constraintEnd_toEndOf="@+id/profileImg"
        app:layout_constraintTop_toTopOf="@+id/profileImg"
        app:srcCompat="@drawable/ellipse" />

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="183dp"
        android:layout_height="183dp"

        android:layout_marginTop="73dp"

        android:contentDescription="@string/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_img_blank" />

    <LinearLayout
        android:id="@+id/helloLayout"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipseLine">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_weight="1"

            android:fontFamily="@font/pretendardbold"
            android:gravity="end"

            android:text="@string/name_text_default"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/helloText"
            android:layout_width="100dp"
            android:layout_height="29dp"
            android:layout_weight="1"

            android:fontFamily="@font/pretendardbold"
            android:gravity="start"

            android:text="@string/hello_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/todayLayout"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloLayout">

        <TextView
            android:id="@+id/todayText"
            android:layout_width="50dp"
            android:layout_height="19dp"

            android:layout_weight="1"
            android:fontFamily="@font/pretendard"
            android:gravity="end"

            android:text="@string/today_text_default"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/todayNum"
            android:layout_width="20dp"
            android:layout_height="19dp"

            android:layout_weight="1"
            android:fontFamily="@font/pretendard"
            android:gravity="end"

            android:text="@string/today_num_default"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/todaySlash"
            android:layout_width="5dp"
            android:layout_height="19dp"

            android:layout_weight="1"
            android:fontFamily="@font/pretendard"
            android:gravity="center"

            android:text="@string/today_slash"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalNum"
            android:layout_width="20dp"
            android:layout_height="19dp"

            android:layout_weight="1"
            android:fontFamily="@font/pretendard"

            android:gravity="start"
            android:text="@string/total_num_default"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aroundMeLayout"
        android:layout_width="270dp"
        android:layout_height="23dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayLayout">

        <TextView
            android:id="@+id/aroundMeTitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"

            android:fontFamily="@font/pretendardbold"
            android:gravity="start"
            android:text="@string/around_me_text"

            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/keywordText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"

            android:fontFamily="@font/pretendard"
            android:gravity="bottom|end"
            android:text="@string/keyword_text"

            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tagTextA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:fontFamily="@font/pretendard"
            android:gravity="bottom|center"
            android:text="@string/keyword_default"

            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tagTextB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:fontFamily="@font/pretendard"
            android:gravity="bottom|center"
            android:text="@string/keyword_default"

            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/aroundMeBg"
        android:layout_width="296dp"
        android:layout_height="34dp"

        android:layout_marginTop="8dp"

        android:contentDescription="@string/around_me_bg_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aroundMeLayout"
        app:srcCompat="@drawable/around_me_bg" />

    <TextView
        android:id="@+id/aroundMeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/pretendard"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"

        android:text="@string/around_me_example"

        app:layout_constraintBottom_toBottomOf="@+id/aroundMeBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aroundMeBg" />

    <LinearLayout
        android:id="@+id/insideMeLayout"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_marginTop="34dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/aroundMeLayout"
        app:layout_constraintTop_toBottomOf="@+id/aroundMeBg">

        <TextView
            android:id="@+id/insideMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:fontFamily="@font/pretendardsemibold"
            android:gravity="start"
            android:text="@string/inside_me_text"

            android:textColor="@color/white"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/insideMeBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/inside_me_btn"
            app:srcCompat="@drawable/arrow_btn_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/behindMeLayout"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/insideMeLayout"
        app:layout_constraintTop_toBottomOf="@+id/insideMeLayout">

        <TextView
            android:id="@+id/behindMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:fontFamily="@font/pretendardsemibold"
            android:gravity="start"
            android:text="@string/behind_me_text"

            android:textColor="@color/white"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/behindMeBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/behind_me_btn"
            app:srcCompat="@drawable/arrow_btn_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frontMeLayout"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/behindMeLayout"
        app:layout_constraintTop_toBottomOf="@+id/behindMeLayout">

        <TextView
            android:id="@+id/frontMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:fontFamily="@font/pretendardsemibold"
            android:gravity="start"
            android:text="@string/in_front_of_me_text"

            android:textColor="@color/white"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/frontMeBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/in_front_of_me_btn"
            app:srcCompat="@drawable/arrow_btn_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBarLayout"
        android:layout_width="0dp"
        android:layout_height="38.2dp"
        android:layout_marginBottom="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profile_icon" />

        <ImageView
            android:id="@+id/rankingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ranking_btn"
            app:srcCompat="@drawable/rank_icon" />

        <ImageView
            android:id="@+id/calendarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/calendar_btn"
            app:srcCompat="@drawable/calendar_icon" />

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/setting_btn"
            app:srcCompat="@drawable/setting_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>